--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
     <meta name="theme-color" content="#000000" />
-    <!-- <meta
+    <meta
       name="description"
       content="Community that brings together muslims from the entire Bunyoro Region, Western Uganda"
-    /> -->
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- <title>React App</title> -->
+    <title>Home | Bwikya Muslim Community</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
